# imc-preprocessor

./: .gitignore  LICENSE  README.md  app.py  config.py  imcpp.py  logger.py  mcd.py  mcdconverter.py  package-list.txt  processing.py  pyproject.toml  spillover.py
imc-preprocessor/: config.py  mcd.py  spillover.py
imcpp/: __init__.py  app.py  app.spec  config.py  logger.py  mcd.py  processing.py  spillover.py
scripts/: build.sh  imcpp_app.py
