[project]
name = "imc-preprocessor"
version = "0.1.0"
description = "Preprocessing tool for Imaging Mass Cytometry assays"
authors = [
    "Bill Flynn <bill.flynn@jax.org>"
]
license = "MIT"
readme = "README.md"
python = "^3.8"
homepage = "https://github.com/TheJacksonLaboratory/imc-preprocessor"
repository = "https://github.com/TheJacksonLaboratory/imc-preprocessor"
documentation = "https://github.com/TheJacksonLaboratory/imc-preprocessor"

keywords = ["IMC", "imaging mass cytometry"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.flit.metadata]
module = "imcpp"
author = "Bill Flynn"
author-email = "bill.flynn@jax.org"
requires = [
    "pandas>=1.0.5",
    "pyyaml>=5.3.1",
    "scikit-image>=0.17.2",
    "scipy>=1.4.1",
    "numpy>=1.18.5",
]

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"
